Create LinkButton and MainContent components

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <main class="main-content">
 
-        <a href="" class="link-button">Soma</a>
+        <a href="./pages/soma.php" class="link-button">Soma</a>
         <a href="" class="link-button">Subtração</a>
         <a href="" class="link-button">Multiplicação</a>
         <a href="" class="link-button">Divisão</a>
