Create Add feature and main components

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Calc</title>
 
-    <link rel="stylesheet" href="./styles/components/components.css">
     <link rel="stylesheet" href="./styles/generic/reset.css">
+    <link rel="stylesheet" href="./styles/settings/colors.css">
+    <link rel="stylesheet" href="./styles/settings/fonts.css">
+    
+    <link rel="stylesheet" href="./styles/components/components.css">
 </head>
 <body>
 
@@ -18,7 +21,7 @@
 
     <main class="main-content">
 
-        <a href="./pages/soma.php" class="link-button">Soma</a>
+        <a href="./pages/adicao.php" class="link-button">Adição</a>
         <a href="" class="link-button">Subtração</a>
         <a href="" class="link-button">Multiplicação</a>
         <a href="" class="link-button">Divisão</a>
