Create Calculator component

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <main class="main-content">
 
+        <a href="./pages/calculator.php" class="link-button">Calculadora</a>
         <a href="./pages/adicao.php" class="link-button">Adição</a>
         <a href="" class="link-button">Subtração</a>
         <a href="" class="link-button">Multiplicação</a>
